CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_CXX_STANDARD 11)

ADD_SUBDIRECTORY(googletest)

INCLUDE_DIRECTORIES(include)

SET(CMAKE_CXX_STANDARD 11)

ADD_EXECUTABLE(test 
Test/test.cpp

)

ADD_EXECUTABLE(main
 main.cpp

)

TARGET_LINK_LIBRARIES(test gtest)
TARGET_COMPILE_DEFINITIONS(test PRIVATE gtest_disable_pthreads=ON)